compiler/testData/diagnostics/tests/varargs/MoreSpecificVarargsOfEqualLength.kt
fun main(d : D) {
    d.from("")
    d.from(1)
}

class D {
    fun from(vararg <!UNUSED_PARAMETER!>a<!> : Any){}
    fun from(vararg <!UNUSED_PARAMETER!>a<!> : String){}
}